substrate/frame/support/test/tests/derive_impl_ui/bad_default_impl_path.stderr
error: cannot find macro `Tiger` in this scope
  --> tests/derive_impl_ui/bad_default_impl_path.rs:59:15
   |
59 | #[derive_impl(Tiger as Animal)]
   |               ^^^^^
